# sdfstudio

./: .codex_future_annotations_targets.txt  .gitignore  .python-version  AGENTS.md  CLAUDE.md  Dockerfile  PBR_BRDF_INTEGRATION.md  README.md  cliff.toml  pyproject.toml  pyrightconfig.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  uv-ci.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  core_code_checks.yml  issue-labeler.yml  publish.yml  publish.yml.disabled  release.yml  viewer_build_deploy.yml  viewer_build_deploy.yml.disabled
colab/: demo.ipynb
docs/: conf.py  sdfstudio-examples.md  sdfstudio-methods.md
docs/agent/: architecture.md  code_conventions.md  releases.md  testing_patterns.md  workflow.md
docs/developer_guides/: config.md
docs/developer_guides/debugging_tools/: local_logger.md  profiling.md
docs/developer_guides/pipelines/: dataparsers.md
docs/developer_guides/viewer/: viewer_overview.md
docs/nerfology/methods/: nerf.md
docs/nerfology/model_components/: visualize_cameras.ipynb  visualize_encoders.ipynb  visualize_samplers.ipynb
docs/quickstart/: first_nerf.md  installation.md
nerfstudio/cameras/: camera_optimizers.py  camera_utils.py  cameras.py  rays.py
nerfstudio/configs/: method_configs.py
nerfstudio/data/: scene_box.py
nerfstudio/data/dataparsers/: base_dataparser.py  heritage_dataparser.py  monosdf_dataparser.py  nerfstudio_dataparser.py  sdfstudio_dataparser.py
nerfstudio/data/datasets/: base_dataset.py
nerfstudio/engine/: optimizers.py  trainer.py
nerfstudio/exporter/: exporter_utils.py  texture_utils.py
nerfstudio/field_components/: activations.py  base_field_component.py  embedding.py  encodings.py  field_heads.py  mlp.py  spatial_distortions.py  temporal_distortions.py
nerfstudio/fields/: base_field.py  density_fields.py  instant_ngp_field.py  nerfacto_field.py  sdf_field.py  tensorf_field.py  vanilla_nerf_field.py
nerfstudio/model_components/: losses.py  ray_generators.py  ray_samplers.py  renderers.py  scene_colliders.py
nerfstudio/models/: base_model.py  base_surface_model.py  dto.py  neus_facto.py
nerfstudio/process_data/: colmap_converter_to_nerfstudio_dataset.py  colmap_utils.py  hloc_utils.py  images_to_nerfstudio_dataset.py  video_to_nerfstudio_dataset.py
nerfstudio/utils/: colormaps.py  colors.py  marching_cubes.py  math.py  poses.py  rich_utils.py  writer.py
nerfstudio/viewer/server/: server.py  visualizer.py
scripts/: eval.py  exporter.py  extract_mesh.py  generate_kitti360_trainsplit.py  heritage_to_nerfstudio.py  process_data.py  render.py  render_mesh.py  texture.py  train.py
scripts/completions/: install.py  setup.bash  setup.zsh
scripts/datasets/: extract_monocular_cues.py  process_nerfstudio_to_sdfstudio.py  process_neuralrgbd_to_sdfstudio.py  process_nuscenes_masks.py  process_scannet_to_sdfstudio.py
scripts/docs/: add_nb_tags.py  build_docs.py
scripts/downloads/: download_data.py
scripts/github/: run_actions.py
scripts/viewer/: view_dataset.py
sdfstudio/cameras/: camera_optimizers.py  camera_paths.py  camera_utils.py  cameras.py  lie_groups.py  rays.py
sdfstudio/configs/: base_config.py  base_types.py  config_utils.py  method_configs.py
sdfstudio/data/: pixel_samplers.py  scene_box.py
sdfstudio/data/datamanagers/: base_datamanager.py  semantic_datamanager.py  variable_res_datamanager.py
sdfstudio/data/dataparsers/: base_dataparser.py  blender_dataparser.py  dnerf_dataparser.py  friends_dataparser.py  heritage_dataparser.py  instant_ngp_dataparser.py  mipnerf360_dataparser.py  monosdf_dataparser.py  nerfstudio_dataparser.py  nuscenes_dataparser.py  phototourism_dataparser.py  record3d_dataparser.py  sdfstudio_dataparser.py
sdfstudio/data/datasets/: base_dataset.py  semantic_dataset.py
sdfstudio/data/utils/: colmap_utils.py  data_utils.py  dataloaders.py  nerfstudio_collate.py
sdfstudio/engine/: callbacks.py  optimizers.py  schedulers.py  trainer.py
sdfstudio/exporter/: exporter_utils.py  texture_utils.py  texture_utils_v2.py  tsdf_utils.py
sdfstudio/field_components/: __init__.py  activations.py  base_field_component.py  embedding.py  encodings.py  field_heads.py  mlp.py  spatial_distortions.py  temporal_distortions.py
sdfstudio/fields/: base_field.py  density_fields.py  nerfacto_field.py  nerfw_field.py  sdf_field.py  semantic_nerf_field.py  tensorf_field.py  vanilla_nerf_field.py
sdfstudio/model_components/: losses.py  patch_warping.py  ray_generators.py  ray_samplers.py  renderers.py  scene_colliders.py
sdfstudio/models/: bakedangelo.py  bakedsdf.py  base_model.py  base_surface_model.py  dto.py  mipnerf.py  monosdf.py  nerfacto.py  neuralangelo.py  neuralreconW.py  neus.py  neus2.py  neus_acc.py  neus_facto.py  semantic_nerfw.py  tensorf.py  unisurf.py  vanilla_nerf.py  volsdf.py
sdfstudio/pipelines/: base_pipeline.py  dynamic_batch.py
sdfstudio/process_data/: __init__.py  base_converter_to_nerfstudio_dataset.py  colmap_converter_to_nerfstudio_dataset.py  colmap_utils.py  equirect_utils.py  hloc_utils.py  images_to_nerfstudio_dataset.py  insta360_utils.py  metashape_utils.py  odm_utils.py  polycam_utils.py  process_data_utils.py  realitycapture_utils.py  record3d_utils.py  video_to_nerfstudio_dataset.py
sdfstudio/utils/: __init__.py  colormaps.py  colors.py  comms.py  decorators.py  eval_utils.py  images.py  install_checks.py  io.py  marching_cubes.py  math.py  misc.py  plotly_utils.py  poses.py  printing.py  profiler.py  rich_utils.py  scripts.py  tensor_dataclass.py  writer.py
sdfstudio/viewer/app/: run_deploy.py
tests/: test_train.py
tests/cameras/: test_cameras.py  test_rays.py
tests/field_components/: test_embedding.py  test_encodings.py  test_field_outputs.py  test_fields.py  test_mlp.py  test_temporal_distortions.py
tests/fields/: test_tcnn_fallbacks.py
tests/model_components/: test_losses.py  test_ray_sampler.py  test_renderers.py
tests/utils/: test_poses.py  test_tensor_dataclass.py  test_visualization.py
(+9 files in other folders)
