[build-system]
requires = ["setuptools>=61.0,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "sdfstudio"
version = "0.6.1"
description = "All-in-one repository for state-of-the-art neural surface reconstruction"
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.9,<3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "appdirs",
    #"av",
    "tyro",
    #"gdown",
    #"ninja",
    #"functorch==0.2.1",
    #"h5py",
    "imageio",
    #"ipywidgets",
    #"jupyterlab",
    #"matplotlib==3.10.0",
    "mediapy",
    #"msgpack",
    #"msgpack_numpy",
    # nerfacc moved to extras (cpu/cuda) - it depends on torch
    "opencv-python-headless",
    #"plotly",
    #"protobuf",
    "pyngrok",
    #"python-socketio",
    #"requests",
    #"rich",
    "scikit-image",
    "tensorboard",
    # torch/torchvision/torchmetrics moved to extras (cpu/cuda) for variant selection
    #"torchtyping>=0.1.4",
    #"u-msgpack-python",
    #"nuscenes-devkit>=1.1.1",
    "wandb",
    "xatlas",
    "trimesh",
    #"numpy==2.2.2",
    #"scipy==1.15.1",
    "tornado",
    "pyzmq",
]

[project.urls]
"Documentation" = "https://docs.nerf.studio"

[project.optional-dependencies]
# Development packages
dev = [
    "pylint",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "typeguard",
    "ruff",
    "pyright",
]

# Documentation related packages
docs = [
    "furo==2022.09.29",
    # Specifying ipython for https://github.com/ipython/ipython/issues/13845
    "ipython==8.6.0",
    "readthedocs-sphinx-search==0.1.2",
    "myst-nb==0.16.0",
    "nbconvert==7.2.5",
    # Keep compatible with Open3D (requires nbformat>=5.7.0).
    "nbformat>=5.7.0,<6.0.0",
    "sphinx==5.2.1",
    "sphinxemoji==0.2.0",
    "sphinx-argparse==0.3.1",
    "sphinx-copybutton==0.5.0",
    "sphinx-design==0.2.0",
    "sphinxext-opengraph==0.6.3",
]

# Heavy optional dependencies (export / mesh / raw image processing)
open3d = [
    "open3d>=0.19.0,<0.20.0",
]
export = [
    "open3d>=0.19.0,<0.20.0",
    "pymeshlab>=2023.12",
]
raw = [
    "rawpy",
]

# PyTorch variant selection (must choose one):
#   CI: uv sync --extra cpu
#   Local GPU: uv sync --extra cuda
cpu = [
    "torch>=2.0,<2.6",
    "torchvision>=0.15,<=0.20.1",
    "torchmetrics[image]",
    "nerfacc==0.5.2",
]
cuda = [
    "torch>=2.0,<2.6",
    "torchvision>=0.15,<=0.20.1",
    "torchmetrics[image]",
    "nerfacc==0.5.2",
]

# CUDA-only build-from-source dependencies (hash encoding, GPU rasterization)
# Requires CUDA toolkit. Use: uv sync --extra cuda --extra cuda-build
cuda-build = [
    "torch>=2.0,<2.6",  # Must be installed before tcnn/nvdiffrast build
    "tinycudann",
    "nvdiffrast",
]

[dependency-groups]
# Why both dependency-groups.dev AND optional-dependencies.dev?
# - dependency-groups.dev: auto-installed by `uv sync` (no flags needed)
# - optional-dependencies.dev: pip-compatible via `pip install -e .[dev]`
# uv cannot reference optional-deps from dependency-groups, so we duplicate.
dev = [
    "pylint",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "typeguard",
    "ruff",
    "pyright",
]

[project.scripts]
# Note, add entrypoint name to scripts/completions/install.py to include CLI completion
sdf-install-cli = "scripts.completions.install:entrypoint"
sdf-process-data = "scripts.process_data:entrypoint"
sdf-download-data = "scripts.downloads.download_data:entrypoint"
sdf-train = "scripts.train:entrypoint"
sdf-eval = "scripts.eval:entrypoint"
sdf-render = "scripts.render:entrypoint"
sdf-export = "scripts.exporter:entrypoint"
sdf-dev-test = "scripts.github.run_actions:entrypoint"
sdf-bridge-server = "sdfstudio.viewer.server.server:entrypoint"
sdf-extract-mesh = "scripts.extract_mesh:entrypoint"
sdf-render-mesh = "scripts.render_mesh:entrypoint"
sdf-texture-mesh = "scripts.texture:entrypoint"

#[options]
# equivalent to using --extra-index-url with pip, which is needed for specifying the CUDA version torch and torchvision
#dependency_links = [
#    "https://download.pytorch.org/whl/cu113"
#]

[tool.setuptools.packages.find]
include = ["sdfstudio*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.json", "py.typed", "setup.bash", "setup.zsh"]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]
good-names-rgxs = "^[_a-zA-Z][_a-z0-9]?$"
ignore-paths = ["scripts/colmap2nerf.py"]
jobs = 0
ignored-classes = ["TensorDataclass"]

disable = [
    "duplicate-code",
    "fixme",
    "logging-fstring-interpolation",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "unnecessary-ellipsis",
]

#pytest
[tool.pytest.ini_options]
addopts = "--typeguard-packages=sdfstudio --cov=sdfstudio --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
markers = [
    "integration: integration/smoke tests (slower, may exercise training loops)",
    "slow: intentionally slow tests",
]
filterwarnings = [
    # CI log hygiene: matplotlib/pyparsing deprecations can spam output enough to break Actions logs.
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["sdfstudio"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "outputs",
    "colab",
    "docs",
    "omnidata",
    "scripts",
    "sdfstudio/viewer",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E402",  # module level import not at top of file (legacy)
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["sdfstudio"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

# pyright
[tool.pyright]
include = ["sdfstudio"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = ["sdfstudio/viewer"]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUndefinedVariable = false

pythonVersion = "3.9"
pythonPlatform = "Linux"

# PyTorch indexes for cpu/cuda variant selection
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
# cpu and cuda/cuda-build extras are mutually exclusive
conflicts = [
    [{ extra = "cpu" }, { extra = "cuda" }],
    [{ extra = "cpu" }, { extra = "cuda-build" }],
]

# These packages require --no-build-isolation (they need torch during build)
no-build-isolation-package = ["tinycudann", "nvdiffrast"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
    { index = "pytorch-cuda", extra = "cuda-build" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
]
tinycudann = { git = "https://github.com/NVlabs/tiny-cuda-nn", subdirectory = "bindings/torch" }
nvdiffrast = { git = "https://github.com/NVlabs/nvdiffrast" }
